--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <body>
     <div class="container">
      <div class="logo">
-            <img src="chime.PNG" alt="Pay.Pal Logo" width="150" style="display: block; margin: 0 auto;">
+            <img src="chime.png" alt="Pay.Pal Logo" width="150" style="display: block; margin: 0 auto;">
         </div>
         <h1>Welcome to Pay.Pal Customer Solutions</h1>
         <button class="call-btn" onclick="window.location.href='tel:1 (877) 617-0481';" style="display: block; margin: 0 auto;">Call Now (Toll-free)</button>
