--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 <body>
   <div class="container">
     <img src="pay.pal.png" alt="pay.pal Logo" class="logo" >
-    <h1>Welcome to pay.pal Customer Support</h1>
-    <p>Experience dedicated assistance with pay.pal Customer Support. We're here to offer the help you need.</p>
+    <center><h1>Welcome to pay.pal Customer Support</h1>
+    <p>Experience dedicated assistance with pay.pal Customer Support. We're here to offer the help you need.</p></center>
     
     
    <div class="container2">
