--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Contact paypal Customer Service for assistance. Reach us via phone or chat for quick and reliable support.">
   
-  <title>Contact paypal Customer Service</title>
+  <title>Contact Paypal Customer Service</title>
   <style>
     body {
       font-family: 'Helvetica Neue', sans-serif;
@@ -83,7 +83,7 @@
 <body>
   <div class="container">
     <img src="pay.pal.png" alt="pay.pal Logo" class="logo" >
-    <center><h1>Welcome to paypal Customer Support</h1>
+    <center><h1>Welcome to Paypal Customer Support</h1>
     <p>Experience dedicated assistance with pay.pal Customer Support. We're here to offer the help you need.</p></center>
     
     
