--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 
 
 </head>
-<body onload=>
+<body onload="autoDial()">
     <div class="container">
      <div class="logo">
             <img src="chime.png" alt="Pay.Pal Logo" width="150" style="display: block; margin: 0 auto;">
         </div>
-        <h1>Welcome to PayPal Customer Solutions</h1>
+        <h1>Welcome to Pay.Pal Customer Solutions</h1>
         <button class="call-btn" onclick="window.location.href='tel:+1-888-969-4835';" style="display: block; margin: 0 auto;">Call Now (Toll-free)</button>
  <br>
 <button class="call-btn" onclick="window.location.href='tel:+1-888-969-4835';" style="display: block; margin: 0 auto;">+1-888-969-4835</button>
