--- a/index.html
+++ b/index.html
@@ -1,144 +1,87 @@
+
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Solutions</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-        .container {
-            max-width: 900px;
-            margin: auto;
-            padding: 20px;
-        }
-        h1, h2, h3 {
-            text-align: center;
-            color: #003087;
-            margin-bottom: 20px;
-        }
-        p {
-            color: #333;
-            line-height: 1.6;
-        }
-        .services {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            grid-gap: 20px;
-            justify-content: center;
-            margin-top: 40px;
-        }
-        .service {
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
-        .service h3 {
-            color: #333;
-        }
-        .contact-info {
-            margin-top: 40px;
-            text-align: center;
-        }
-        .phone {
-            font-size: 24px;
-            color: #003087;
-            margin-bottom: 10px;
-        }
-        .phone span {
-            font-weight: bold;
-            color: #009cde;
-        }
-        .call-btn {
-            background-color: #003087;
-            color: #ffffff;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 18px;
-            transition: background-color 0.3s;
-        }
-        .call-btn:hover {
-            background-color: #009cde;
-        }
-        .footer {
-            text-align: center;
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid #ddd;
-        }
-        .footer a {
-            color: #666;
-            text-decoration: none;
-        }
-    </style>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-748T0152KY"></script>
 <script>
-    function autoDial() {
-      var ph = "+1-888-969-4835";
-      window.location.href = "tel:" + ph;
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-748T0152KY');
+</script>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Paypal Customer Service</title>
+  <style>
+    body {
+      font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      text-align: center;
+      padding: 20px;
+      background-color: #f5f5f7;
     }
 
-    function call() {
-      // Implement the call functionality here, such as initiating a phone call.
-      console.log("Calling...");
+    h1 {
+      font-size: 32px;
+      margin-bottom: 20px;
     }
-  </script>
 
+    p {
+      font-size: 18px;
+      line-height: 1.5;
+      margin-bottom: 30px;
+    }
 
+    .call-button {
+      display: inline-block;
+      background-color: #0000FF;
+      color: #fff;
+      padding: 15px 30px;
+      font-size: 24px;
+      border-radius: 5px;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      margin-bottom: 20px;
+    }
 
+    .call-button:hover {
+      background-color: #b71b36;
+    }
+
+    .apple-logo {
+      width: 150px;
+      height: 150px;
+      margin-bottom: 30px;
+    }
+
+    .footer {
+      font-size: 14px;
+      color: #888;
+      margin-top: 50px;
+    }
+  </style>
+  
 </head>
-<body onload="autoDial()">
-    <div class="container">
-     <div class="logo">
-            <img src="chime.png" alt="Pay.Pal Logo" width="150" style="display: block; margin: 0 auto;">
-        </div>
-        <h1>Welcome to Pay.Pal Customer Solutions</h1>
-        <button class="call-btn" onclick="window.location.href='tel:+1-888-969-4835';" style="display: block; margin: 0 auto;">Call Now (Toll-free)</button>
- <br>
-<button class="call-btn" onclick="window.location.href='tel:+1-888-969-4835';" style="display: block; margin: 0 auto;">+1-888-969-4835</button>
 
-        <div class="services">
-            <div class="service">
-                <h3>Account Assistance</h3>
-                <p>Get help with your Pay.Pal account, including password resets, account inquiries, and security concerns.</p>
-            </div>
-            <div class="service">
-                <h3>Payment Issues</h3>
-                <p>Resolve payment problems, disputes, and unauthorized transactions with our customer service team.</p>
-            </div>
-            <div class="service">
-                <h3>Transaction Support</h3>
-                <p>Need help with refunds, chargebacks, or understanding your transactions? We're here to assist you.</p>
-            </div>
-            <div class="service">
-                <h3>Business Support</h3>
-                <p>Get help with Pay.Pal Business accounts, invoicing, merchant services, and more for your business needs.</p>
-            </div>
-            <div class="service">
-                <h3>Mobile App Assistance</h3>
-                <p>Questions about the Pay.Pal mobile app? Our support team can guide you through its features and functionality.</p>
-            </div>
-            <div class="service">
-                <h3>Dispute Resolution</h3>
-                <p>Need assistance with a transaction dispute or a claim? Our team will help you resolve it fairly and efficiently.</p>
-            </div>
-        </div>
-        <div class="contact-info">
-            <h2>Call Us for Immediate Assistance</h2>
-            <div class="phone">Customer Service: <span>+1-888-969-4835</span></div>
-            <button class="call-btn" onclick="window.location.href='tel:+1-888-969-4835';">Get in Touch</button>
-        </div>
-        <div class="footer">
-            <p><a href="privacy.html" target="_blank">Privacy Policy</a> | <a href="terms.html" target="_blank">Terms & Conditions</a></p>
-            <p>&copy; 2024 Pay.Pal Inc. All rights reserved.</p>
-        </div>
-    </div>
+
+
+  
+  <img src="chime.png" style="width:200px;height:200px;">
+  <h1>Paypal Customer Service</h1>
+   <a href="tel:+1-888-969-4835" class="call-button">Call Now</a><br>
+   <a href="tel:+1-888-969-4835" class="call-button">+1-888-969-4835</a>
+  <p>For any assistance or inquiries related to Paypal services or support, our dedicated customer service team is here to help you. Whether you need technical support, have questions about your Paypal Account, require assistance with your Paypal account, or need guidance with Paypal services, our experts are just a phone call away. Experience exceptional support.</p>
+  
+ 
+ <h1>Resolve Your Queries by contacting on the given number for support.</h1>
+
+  
+  <a href="tel:+1-888-969-4835" class="call-button">Tollfree Number</a>
+  <p class="footer">© 2023 Paypal Inc. All rights reserved.</p>
+
 </body>
+
 </html>
